--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="main.css">
-  <script defer src="main.js"></script>
+  <link rel="stylesheet" href="css/main.css">
+  <script defer src="js/main.js"></script>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   <h2 class="main-title">A Nice Image</h2>
 
   <!-- example: displaying an image in assets folder -->
-  <img class="responsive-img" src="uiux-team.jpg" alt="the uiux team enjoying a bbq"/>
+  <img class="responsive-img" src="assets/uiux-team.jpg" alt="the uiux team enjoying a bbq"/>
 
 </body>
 
